[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Menu/Mod/modmenu.gd" type="Script" id=1]
[ext_resource path="res://Game/Menu/southpark.theme" type="Theme" id=2]

[node name="ModMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.054902, 0.682353, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="LoadPCK" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -408.0
margin_top = -264.0
margin_right = 408.0
margin_bottom = 264.0
custom_colors/files_disabled = Color( 0.388235, 0, 0, 1 )
window_title = "Open Mod .PCK"
dialog_text = "Open a .PCK file that was exported from Godot 3.5.2. 
You are responsible for your own safety and wellbeing of your device."
dialog_autowrap = true
mode = 0
access = 2
filters = PoolStringArray( "*.pck ; Godot PCK File", "*.zip ; Godot .ZIP File" )
show_hidden_files = true

[node name="Loadres" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -408.0
margin_top = -264.0
margin_right = 408.0
margin_bottom = 264.0
custom_colors/files_disabled = Color( 0.388235, 0, 0, 1 )
window_title = "Open a File"
dialog_text = "Open a .tcsn File from main game file. Mods are supported."
dialog_autowrap = true
mode = 0
filters = PoolStringArray( "*.tscn ; Godot Scene File" )

[node name="sidemenu" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -560.0
margin_right = 784.0
theme = ExtResource( 2 )
alignment = 1

[node name="opendialog" type="Button" parent="sidemenu"]
margin_top = 211.0
margin_right = 784.0
margin_bottom = 254.0
text = "Open .PCK Dialog"

[node name="openother" type="Button" parent="sidemenu"]
margin_top = 258.0
margin_right = 784.0
margin_bottom = 301.0
text = "Open res:// Dialog"

[node name="btm" type="Button" parent="sidemenu"]
margin_top = 305.0
margin_right = 784.0
margin_bottom = 348.0
text = "Back To Menu"

[connection signal="file_selected" from="LoadPCK" to="." method="_on_LoadPCK_file_selected"]
[connection signal="file_selected" from="Loadres" to="." method="_on_Loadres_file_selected"]
[connection signal="pressed" from="sidemenu/opendialog" to="." method="_on_opendialog_pressed"]
[connection signal="pressed" from="sidemenu/openother" to="." method="_on_openother_pressed"]
[connection signal="pressed" from="sidemenu/btm" to="." method="_on_btm_pressed"]
